# buffleaudio_align

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  ROADMAP.md  project_plan.txt  wrangler.toml
BufflePlug-Analyzer/: BufflePlug-Analyzer.jucer
BufflePlug-Analyzer/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
BufflePlug-Analyzer/Builds/MacOSX/BufflePlug-Analyzer.xcodeproj/: project.pbxproj
BufflePlug-Analyzer/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
BufflePlug-Analyzer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BufflePlug-Analyzer/Source/DSP/: AlignmentReport.cpp  AlignmentReport.h  ArticulationRisk.cpp  ArticulationRisk.h  BidirectionalNudge.cpp  BidirectionalNudge.h  BreathPreservationMask.cpp  BreathPreservationMask.h  ConsonantTamer.cpp  ConsonantTamer.h  EnvelopeFeatureExtractor.cpp  EnvelopeFeatureExtractor.h  ManualNudgeDelay.cpp  ManualNudgeDelay.h  NaturalnessGuardrail.cpp  NaturalnessGuardrail.h  PhraseHealth.cpp  PhraseHealth.h  PreviewModeMixer.cpp  PreviewModeMixer.h  RemovedMaterialMeter.cpp  RemovedMaterialMeter.h  StackRolePreset.cpp  StackRolePreset.h  StackSpreadGovernor.cpp  StackSpreadGovernor.h  TimingOffsetEstimator.cpp  TimingOffsetEstimator.h  TrustDiagnostics.cpp  TrustDiagnostics.h  WorkflowState.cpp  WorkflowState.h
docs/: build.md  deployment.md  healthcheck-2026-07-06.md  healthcheck-2026-07-07-ab-preview.md  healthcheck-2026-07-07-au-validation.md  healthcheck-2026-07-07-bidirectional-nudge.md  healthcheck-2026-07-07-changed-meter.md  healthcheck-2026-07-07-copy-report.md  healthcheck-2026-07-07-naturalness-validation.md  healthcheck-2026-07-07-package-hygiene.md  healthcheck-2026-07-07-release-tooling.md  healthcheck-2026-07-07-session-flow-polish.md  healthcheck-2026-07-07-stack-roles.md  healthcheck-2026-07-07-tamer-audition.md  healthcheck-2026-07-07-trust-diagnostics.md  healthcheck-2026-07-07.md  healthcheck-2026-07-08-articulation-risk-strip.md  healthcheck-2026-07-08-phrase-health-classifier.md  healthcheck-2026-07-08-processor-latency-contract.md  healthcheck-2026-07-08-product-landing-workflow.md  healthcheck-2026-07-08-report-export-breath-mask.md  healthcheck-2026-07-08-stack-spread-governor.md  healthcheck-2026-07-08-v0.4.0-preview-package.md  healthcheck-2026-07-08-vst3-pluginval.md  release-evidence-template.md  releases.md  v1-tester-guide.md  validation-host-latency.md
landing/: index.html  styles.css
scripts/: build_and_package_macos.sh  expose_landing_cloudflared.sh  publish_github_release.sh  serve_landing.sh  v1_local_preflight.sh
tests/: DSPCoreTests.cpp  ProcessorLatencyContractTests.cpp
